<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/page_title"
        android:gravity="center_horizontal"
        android:padding="10dp"
        android:textSize="22sp"
        android:textColor="#364A04"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/model"
        android:hint="@string/model"
        android:textSize="16sp"
        android:textColor="#364A04"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/price"
        android:hint="@string/price"
        android:textSize="16sp"
        android:textColor="#364A04"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/year"
        android:hint="@string/year"
        android:textSize="16sp"
        android:textColor="#364A04"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/power"
        android:hint="@string/power"
        android:textSize="16sp"
        android:textColor="#364A04"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/type"
        android:hint="@string/type"
        android:textSize="16sp"
        android:textColor="#364A04"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/country"
        android:hint="@string/country"
        android:textSize="16sp"
        android:textColor="#364A04"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/coeff"
        android:hint="@string/coeff"
        android:textSize="16sp"
        android:textColor="#364A04"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_text"
        android:textSize="16sp"
        android:id="@+id/add_car"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/to_query_text"
        android:textSize="16sp"
        android:id="@+id/to_query"/>
</LinearLayout>